--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Suraj Doberiyal : Tic-Tac-Toe</title>
+<!--     Updating SEO tags -->
      <meta name="keywords" content="Game,Tic tac toe game">
       <meta name="author" content="Suraj kumar">
 
